--- a/exercises/simple-html-calculator/style.css
+++ b/exercises/simple-html-calculator/style.css
@@ -57,6 +57,7 @@ body {
 .calc-equals {
   align-items: center;
   box-shadow: 1px 2px 3px #000;
+  cursor: pointer;
   display: flex;
   height: 50px;
   justify-content: center;
