--- a/exercises/bugs-on-a-plane/style.css
+++ b/exercises/bugs-on-a-plane/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+:root {
+  --bg-color: #92bde7;
+  --input-font-size: 0.6875em;
+  --company-info-bgc: #c9e6ff;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -14,7 +22,270 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: #92bde7;
+  background-color: var(--bg-color);
   color: #485e74;
   line-height: 1.6;
+  font-family: Lato, Tahoma, Geneva, Verdana, sans-serif;
+  padding: 1em;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+.container {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.h1-brand {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.h1-brand span {
+  color: #fff;
+}
+
+.wrapper {
+  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+}
+
+.company-info {
+  background-color: var(--company-info-bgc);
+}
+
+.company-info h3 {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.entreaty {
+  overflow: auto;
+  padding: 1em;
+}
+
+.entreaty p {
+  margin: 0;
+}
+
+.form-wrap {
+  background-color: #f9feff;
+}
+
+.form-wrap form {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.form-wrap h3 {
+  padding: 1em 1em 0;
+}
+
+form label {
+  display: block;
+}
+
+.input-wrap {
+  margin: 0;
+  padding: 1em;
+}
+
+.input-cb-rb-ul {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.input-cb-rb-ul li {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1em;
+}
+
+.input-cb-rb-ul li input {
+  width: 2em;
+}
+
+.form-wrap .full {
+  grid-column: 1/3;
+}
+
+.form-wrap button,
+.form-wrap input {
+  padding: 1em;
+  width: 100%;
+  font-size: var(--input-font-size);
+}
+
+.form-wrap button {
+  background-color: #c9e6ff;
+  border: 0;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.form-wrap button:hover,
+.form-wrap button:focus {
+  background-color: var(--bg-color);
+  color: #fff;
+  outline: 0;
+  transition: background-color 0.75s ease-out;
+}
+
+.input-wrap,
+.input-wrap-select-custom {
+  font-size: 1em;
+}
+
+.contain {
+  overflow: auto;
+}
+
+.ellipsis {
+  overflow: hidden;/* Required for text-overflow to do anything */
+  text-overflow: ellipsis;
+  white-space: nowrap;/* Required for text-overflow to do anything */
+}
+
+/* CUSTOM SELECT - functional styles */
+.select-custom {
+  position: relative;
+  cursor: pointer;
+}
+
+.select-custom.open {
+  overflow: visible;
+}
+
+.select-custom-input {
+  cursor: pointer;
+  font-size: 0.6875em;
+  border: 1px solid;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 1em 3em 1em 1em;
+  border: 1px solid rgb(204, 204, 204);
+}
+
+.select-custom::after {
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid;
+  bottom: 2em;
+  content: '';
+  height: 0;
+  position: absolute;
+  right: 2em;
+  width: 0;
+}
+
+.select-custom.open::after {
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: none;
+  border-bottom: 6px solid;
+}
+
+.select-custom .select-custom-opts {
+  background-color: #fff;
+  box-shadow: 0px 2px 5px;
+  height: 0;
+  margin-top: 0;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+
+.select-custom.open .select-custom-opts {
+  height: auto;
+  overflow-y: auto;
+  max-height: 130px;
+}
+
+.select-custom.open .select-custom-opts .scroll-indicator {
+  background-color: orange;
+  content: '';
+  height: 10px;
+  position: absolute;
+  width: 100%;
+  animation: glow 1s linear infinite;
+}
+
+@keyframes glow{
+  0% {
+    box-shadow: 0 0 20 blue;
+  }
+
+  50% {
+    box-shadow: 0 0 0px blue;
+  }
+  
+  100% {
+    box-shadow: 0 0 20 blue;
+  }
+}
+
+.select-custom-opt {
+  height: 40px;
+  /* display: flex; */
+  align-items: center;
+  padding: 1em;
+  font-size: var(--input-font-size);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.select-custom-opt.selected {
+  cursor: auto;
+  color: #bbb;
+}
+
+.select-custom-opt:nth-child(even) {
+  background-color: var(--company-info-bgc);
+}
+
+.select-custom-opt:last-of-type {
+  border-bottom: none;
+  height: 41px;
+}
+
+/* CUSTOM SELECT - asthetic styles */
+
+.input-wrap-select-custom {
+  padding: 1em;
+}
+
+.input-wrap-select-custom .select-custom-opts {
+  width: calc(100% - 2em);
+}
+
+@media (min-width: 600px) {
+  .input-cb-rb-ul {
+    flex-direction: row:
+  }
+}
+
+@media (min-width: 900px) {
+  .form-wrap form {
+    display: grid;
+  }
+
+  .input-cb-rb-ul {
+    align-items: center;
+    flex-direction: row;
+    height: 39px;
+  }
 }
